# HolograPy

./: .gitignore  GF_GS_example.ipynb  GF_function_example.ipynb  LICENSE.txt  PM_function_example.ipynb  README.md  pyproject.toml  setup.cfg
examples/.ipynb_checkpoints/: example-checkpoint.ipynb
src/HolograPy/: __init__.py  utils.py
