[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holograPy"
version = "0.1.0"
description = "Lightweight Python library for 3D holography and acoustic simulation."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "James A. Hardwick"}
]
